Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2280

QT should use _NET_FRAME_EXTENTS X property when getting window frame size on X11 whenever possible

    XMLWordPrintable

Details

    Description

      I'm running Qt 4.3.4 on Fedora Linux 9, using gcc 4.3.0. Qt is
      configured to be run on X11.

      The issue is that the internal implementation of QWidget for X11 tries
      to walk the window chain upwards until it reaches the root window to
      retrieve the size of the window manager frame. Thus, it implicitly
      assumes that the window manager reparents the client window (created by
      Qt) into the frame, which is true for most, but not all window managers
      (e.g. Compiz does not reparent).

      Better, IMO, would be trying to use the _NET_FRAME_EXTENTS window
      property
      (http://standards.freedesktop.org/wm-spec/wm-spec-latest.html#id2552416)
      if possible and use that if it's set. If it's not set, fall back to the
      window chain walking code.

      I've attached a patch which does exactly what I just described - please
      consider applying it.

      Attachments

        For Gerrit Dashboard: QTBUG-2280
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            admin Administrator
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes